update qiniu api